--- a/CSD213 Test1.html
+++ b/CSD213 Test1.html
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+  <title>TEST 1 – My Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="description" content="Here's the complete HTML file  that fully implements all three features — Add Activity, Add Grade, and Delete Activity — with validations and messages displayed " />
+  <meta name="author" content="Ved Navinkumar Patel" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="HTML, CSS, JavaScript, TEST 1" />
   <style>
     input,
     button {
